kubernetes/backend/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mern 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: siddhartha54/foodmate-backend:v.10
          ports:
            - containerPort: 4000
