kubernetes/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mern 
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
